# netscope-clean

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: advanced.py  alerts.py  audit_store.py  auth.py  auth_store.py  command_sets.py  config.py  config_dump.py  credential_vault.py  dependencies.py  diff.py  discovery.py  export.py  logging_config.py  main.py  migrations.py  models.py  normalizer.py  parsers.py  path_trace.py  playbook_engine.py  playbook_loader.py  playbook_store.py  playbooks.py  rate_limit.py  scheduler.py  search.py  settings_store.py  store.py  store_sqlite.py  utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tests/: conftest.py  test_advanced.py  test_advanced_api.py  test_alerts.py  test_api.py  test_auth.py  test_auth_api.py  test_backup.py  test_command_sets.py  test_config.py  test_config_dump.py  test_credential_vault.py  test_diff.py  test_discovery.py  test_e2e_discovery.py  test_export.py  test_failures.py  test_logging_health.py  test_migrations.py  test_normalizer.py  test_parsers.py  test_path_trace.py  test_playbook_diff.py  test_playbook_engine.py  test_playbook_loader.py  test_playbooks.py  test_rate_limit.py  test_scheduler.py  test_search.py  test_settings_store.py  test_snapshots.py  test_snmp_collector.py  test_store.py  test_summary.py  test_template_plugin.py  (+1 more)
(+81 files in other folders)
